--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -72,7 +72,7 @@ workflows:
         script: flutter packages pub get      
       - name: Flutter build ipa and automatic versioning
         script: |
-          BUILD_NUMBER=$$(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID") + 1))
+          BUILD_NUMBER=$(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID") + 1))
           flutter build ipa --release \
           --build-name=1.0.$BUILD_NUMBER \
           --build-number=$BUILD_NUMBER\
