--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -24,7 +24,6 @@ workflows:
     environment:
       groups:
         - aws_credentials # Includes (AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_DEFAULT_REGION)
-        - ios_credentials # Includes (APP_STORE_CONNECT_PRIVATE_KEY, APP_STORE_CONNECT_ISSUER_ID, APP_STORE_CONNECT_KEY_IDENTIFIER, CERTIFICATE_PRIVATE_KEY)
       vars:
         <<: *env_vars
         XCODE_WORKSPACE: "ios/Runner.xcworkspace"
@@ -51,6 +50,8 @@ workflows:
           echo "DELIMITER" >> $CM_ENV
       - name: Set bundle id # Replace the base bundle Id with the client's
         script: |
+          echo $BASE_BUNDLE_ID
+          echo $BUNDLE_ID
           PBXPROJ=$CM_BUILD_DIR/ios/Runner.xcodeproj/project.pbxproj
           sed -i.bak "s/\$BASE_BUNDLE_ID/$BUNDLE_ID/g" $PBXPROJ
       - name: Change iOS icons
