--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -423,8 +423,8 @@ workflows:
     artifacts: 
       - *apk
       - *aab
-  #  publishing:
-   #   <<: *play_store_publish
+    publishing:
+      <<: *play_store_publish
     # publishing:
     #   scripts: 
     #     - name: Publish to Slack
