--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -13,12 +13,11 @@ definitions:
         unzip assets.zip -d $CLIENT_ASSETS_FOLDER
 
 
-# Builds will be triggered via REST API with the $CLIENT_ID in the payload
+# Builds will be triggered via Codemagic's REST API with the $CLIENT_ID variable and the WL_CLIENT_ID environment group in the payload
 workflows:
   ios-client-release:
     name: iOS client release
     instance_type: mac_mini_m1
-    max_build_duration: 120
     labels:
       - ${CLIENT_ID} # Helpful when you open your Codemagic's builds page  
     environment:
@@ -31,23 +30,6 @@ workflows:
         BASE_BUNDLE_ID: io.codemagic.whitelabel.dev # <-- Put the bundle ID that exists in the code, it will be replaced with the client's.
     scripts:
       - *get_assets #Getting client assets from S3 bucket
-      - name: Set iOS environment variables from settings.env
-        script: |
-          source ./$CLIENT_ASSETS_FOLDER/settings.env
-
-          echo "APP_STORE_CONNECT_KEY_IDENTIFIER=$APP_STORE_CONNECT_KEY_IDENTIFIER" >> $CM_ENV
-          echo "APP_STORE_CONNECT_ISSUER_ID=$APP_STORE_CONNECT_ISSUER_ID" >> $CM_ENV
-
-          echo "BUNDLE_ID=$BUNDLE_ID" >> $CM_ENV
-          echo "APP_STORE_ID=$APP_STORE_ID" >> $CM_ENV
-
-          echo "APP_STORE_CONNECT_PRIVATE_KEY<<DELIMITER" >> $CM_ENV
-          echo "$APP_STORE_CONNECT_PRIVATE_KEY" >> $CM_ENV
-          echo "DELIMITER" >> $CM_ENV
-
-          echo "CERTIFICATE_PRIVATE_KEY<<DELIMITER" >> $CM_ENV
-          echo "$CERTIFICATE_PRIVATE_KEY" >> $CM_ENV
-          echo "DELIMITER" >> $CM_ENV
       - name: Set bundle id # Replace the base bundle Id with the client's
         script: |
           PBXPROJ=$CM_BUILD_DIR/ios/Runner.xcodeproj/project.pbxproj
@@ -94,33 +76,15 @@ workflows:
   android-client-release:
     name: Android client release
     instance_type: mac_mini_m1
-    max_build_duration: 120
     labels:
       - ${CLIENT_ID} # Helpful when you open your Codemagic's builds page 
     environment:
       groups:
-        - playstore_credentials # Includes (GCLOUD_SERVICE_ACCOUNT_CREDENTIALS) for only validating the intial workflow.
         - aws_credentials # Includes (AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_DEFAULT_REGION)
       vars:
         <<: *env_vars
-        GOOGLE_PLAY_TRACK: internal # <-- The track you want to publish to in Google Play.
-        GCLOUD_SERVICE_ACCOUNT_CREDENTIALS_HOLDER: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS # <-- This service account is only for validating the inital workflow, and will not be used to publish the app
     scripts:
       - *get_assets #Getting client assets from S3 bucket
-      - name: Set Android environment variables from settings.env
-        script: |
-          source ./$CLIENT_ASSETS_FOLDER/settings.env
-
-          echo "PACKAGE_NAME=$PACKAGE_NAME" >> $CM_ENV
-
-          echo "CM_KEYSTORE_PASSWORD=$CM_KEYSTORE_PASSWORD" >> $CM_ENV
-          echo "CM_KEY_PASSWORD=$CM_KEY_PASSWORD" >> $CM_ENV
-          echo "CM_KEY_ALIAS=$CM_KEY_ALIAS" >> $CM_ENV
-          echo "CM_KEYSTORE_PATH=$CM_KEYSTORE_PATH" >> $CM_ENV
-
-          echo 'GCLOUD_SERVICE_ACCOUNT_CREDENTIALS<<DELIMITER' >> $CM_ENV
-          echo "$GCLOUD_SERVICE_ACCOUNT_CREDENTIALS" >> $CM_ENV
-          echo 'DELIMITER' >> $CM_ENV
       - name: Set Package name
         script: |
           flutter pub add change_app_package_name
@@ -131,12 +95,13 @@ workflows:
         script: cp -r ./$CLIENT_ASSETS_FOLDER/hero.png assets/hero.png
       - name: Set client id
         script: cp -r ./$CLIENT_ASSETS_FOLDER/client.env assets/client.env
+      - name: Set up keystore
+        script: echo $CM_KEYSTORE | base64 --decode > $CM_KEYSTORE_PATH
       - name: Install dependencies
         script: flutter packages pub get
       - name: Flutter build aab and automatic versioning
         script: |
-          # BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))
-          BUILD_NUMBER=5
+          BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))
           flutter build appbundle --release \
           --build-name=1.0.$BUILD_NUMBER \
           --build-number=$BUILD_NUMBER
@@ -145,8 +110,8 @@ workflows:
       - test-results/flutter.json
     publishing:
       google_play:
-        credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS_HOLDER
-        track: $GOOGLE_PLAY_TRACK 
+        credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
+        track: internal 
         submit_as_draft: true
       email: 
         recipients:
